; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/mv88e6xxx/extr_global2_avb.c_mv88e6xxx_g2_avb_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/mv88e6xxx/extr_global2_avb.c_mv88e6xxx_g2_avb_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mv88e6xxx_chip = type { i32 }

@MV88E6352_G2_AVB_DATA = common dso_local global i32 0, align 4
@MV88E6352_G2_AVB_CMD = common dso_local global i32 0, align 4
@MV88E6352_G2_AVB_CMD_BUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mv88e6xxx_chip*, i32, i32)* @mv88e6xxx_g2_avb_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mv88e6xxx_g2_avb_write(%struct.mv88e6xxx_chip* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mv88e6xxx_chip*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.mv88e6xxx_chip* %0, %struct.mv88e6xxx_chip** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %5, align 8
  %10 = call i32 @mv88e6xxx_g2_avb_wait(%struct.mv88e6xxx_chip* %9)
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* %8, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* %8, align 4
  store i32 %14, i32* %4, align 4
  br label %33

15:                                               ; preds = %3
  %16 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %5, align 8
  %17 = load i32, i32* @MV88E6352_G2_AVB_DATA, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @mv88e6xxx_g2_write(%struct.mv88e6xxx_chip* %16, i32 %17, i32 %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %15
  %23 = load i32, i32* %8, align 4
  store i32 %23, i32* %4, align 4
  br label %33

24:                                               ; preds = %15
  %25 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %5, align 8
  %26 = load i32, i32* @MV88E6352_G2_AVB_CMD, align 4
  %27 = load i32, i32* @MV88E6352_G2_AVB_CMD_BUSY, align 4
  %28 = load i32, i32* %6, align 4
  %29 = or i32 %27, %28
  %30 = call i32 @mv88e6xxx_g2_write(%struct.mv88e6xxx_chip* %25, i32 %26, i32 %29)
  store i32 %30, i32* %8, align 4
  %31 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %5, align 8
  %32 = call i32 @mv88e6xxx_g2_avb_wait(%struct.mv88e6xxx_chip* %31)
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %24, %22, %13
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @mv88e6xxx_g2_avb_wait(%struct.mv88e6xxx_chip*) #1

declare dso_local i32 @mv88e6xxx_g2_write(%struct.mv88e6xxx_chip*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
